@@ -25,17 +25,24 @@ C++ library. \url{http://code.google.com/apis/protocolbuffers/docs/reference/cpp
 \seealso{
 	\linkS4class{ZeroCopyInputStream} for methods
 }
-% \examples{
+\examples{
+stream <- ArrayInputStream(as.raw(0:10))
+stream$ReadRaw(5)
+
+stringsstream <- ArrayInputStream(as.raw(c(0x74, 0x65, 0x73, 0x74, 0x69, 0x6e, 0x67)))
+stringsstream$ReadString(7)
+
+intstream <- ArrayInputStream(as.raw(c(0x9e, 0xa7, 0x05)))
+intstream$ReadVarint32()
+}
 % local({
 % 	stream <- ArrayInputStream( as.raw(0:10) )
 % 	stopifnot( identical( stream$Next(), as.raw(0:10) ) )
 % 	stream$BackUp( 5 )
 % 	stopifnot( identical( stream$Next(), as.raw(6:10) ) )
-% 	
+%
 % 	# limiting the block size
 % 	stream <- ArrayInputStream( as.raw(0:10), 5 )
 % 	stopifnot( identical(length( stream$Next() ), 5L ) )
 % })
-% 
-% }
 \keyword{classes}
